#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-27
2015-03-09 Mikhail S. Dubrovin	
- AndorBaseV1 - set Rows=512, Cols=512 for SxrEndstation.0:Andor.1/2 in sxrg3715-r0046, use cmod pars 2,10,10,Cols (PSAS-121)
	
Tag: V00-05-26
2015-01-13 Mikhail S. Dubrovin	
- NDArrIOV1 - add print_bits parameter in static method save_ndarray (PSAS-44)
	
Tag: V00-05-25
2015-01-06 Mikhail S. Dubrovin	
- NDArrIOV1.cpp - add instatiation of templates for int16_t, uint8_t
- include/VarShapeCameraBaseV1.h, Epix100aBaseV1.h - extend cmod initialization for 16 elements

Tag: V00-05-24
2014-11-15 Mikhail S. Dubrovin	
- In all *BaseV*.h classes add method size_base() in order to resolve compilation with dbg problem (PSAS-67)

Tag: V00-05-23
2014-11-13 Mikhail S. Dubrovin
- NDArrIOV1 - get_ndarray() now returns reference in stead of ndarray; improve conditional output for debugging (PSAS-44).
	
Tag: V00-05-22
2014-11-11 Mikhail S. Dubrovin
- GlobalMethods - add method strDataTypeForEnum(...); NDArrIOV1.cpp - improve output supression (PSAS-44)
	
Tag: V00-05-21
2014-11-05 Mikhail S. Dubrovin
- add Epix100aBaseV1.h

Tag: V00-05-20
2014-07-03 Mikhail S. Dubrovin
- add VarShapeCameraBaseV1.h - for calibration of variable size arrays
	
Tag: V00-05-19
2014-06-30 Mikhail S. Dubrovin
- NDArrIOV1 - add constructor to load ndarray from file with metadata, w/o default initialization
- test/ex_ndarrio.cpp - add test for new constructor 
- test/test.data TYPE -> DTYPE
	
Tag: V00-05-18
2014-06-13 Mikhail S. Dubrovin
- in SConscript add DOCGEN="doxy-all psana-modules-doxy"
	
Tag: V00-05-17
2014-05-23 Mikhail S. Dubrovin
- add AndorBaseV1.h, Opal1000BaseV1.h, Opal4000BaseV1.h