@@ -47,8 +47,10 @@ public:
   const static size_t   Ndim = 2; 
   //const static size_t   Rows = 2048; 
   //const static size_t   Cols = 2048; 
-  const static size_t   Rows = 512; 
-  const static size_t   Cols = 512; 
+  //const static size_t   Rows = 512; 
+  //const static size_t   Cols = 512; 
+  const static size_t   Rows = 0; // FOR VARIABLE SHAPE DATA PARAMETERS WILL BE TAKEN FROM FILE METADATA
+  const static size_t   Cols = 0; // FOR VARIABLE SHAPE DATA PARAMETERS WILL BE TAKEN FROM FILE METADATA
   const static size_t   Size = Rows*Cols; 
   const static size_t   SizeCM = 16; 
 
